worked on package & trading